fix notebook directory in config

--- a/runbooks/DevSecOps runbooks/0.2. Install Jupyter Notebook.ipynb
+++ b/runbooks/DevSecOps runbooks/0.2. Install Jupyter Notebook.ipynb
@@ -2,16 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "naked-opportunity",
-   "metadata": {},
    "source": [
     "# Jupyter Notebook Installation"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "finished-ethernet",
-   "metadata": {},
    "source": [
     "**Objective**:\n",
     "Run this runbook to ckeck if Jupyter Notebook are installed or not and, if required, fix it!\n",
@@ -20,126 +17,115 @@
     "1. Connect to system\n",
     "2. Verify if jupyter notebook is installed\n",
     "3. Install jupyter\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "pending-converter",
-   "metadata": {},
    "source": [
     "### 1. Connect to the target system"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "entire-ireland",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%run \"0.0. Connect to the target system.ipynb\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "outside-colorado",
-   "metadata": {},
    "source": [
     "### 2, Verify installation in the system"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "geographic-complaint",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%%bash \n",
-    "STATUS_SCRIPT=\"which jupyter\"\n",
-    "# ssh -i ~/.ssh/devopslab-london.pem ${2}@${1} ${STATUS_SCRIPT}\n",
-    "${STATUS_SCRIPT}\n",
-    "if [ $? -eq 0 ];\n",
-    "then\n",
-    "  echo \"JUpyter is installed\"\n",
-    "else\n",
-    "  echo \"Jupyter is not installed\"\n",
+    "%%bash \r\n",
+    "STATUS_SCRIPT=\"which jupyter\"\r\n",
+    "# ssh -i ~/.ssh/devopslab-london.pem ${2}@${1} ${STATUS_SCRIPT}\r\n",
+    "${STATUS_SCRIPT}\r\n",
+    "if [ $? -eq 0 ];\r\n",
+    "then\r\n",
+    "  echo \"JUpyter is installed\"\r\n",
+    "else\r\n",
+    "  echo \"Jupyter is not installed\"\r\n",
     "fi"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "retained-daisy",
-   "metadata": {},
    "source": [
     "### 3. Do installation in the system"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "representative-quest",
-   "metadata": {},
    "source": [
     "Now, it is time to install *jupyter* with the *pip* install (notice that, inside the virtual environment, *pip* could be used instead *pip3* as in the virtual environment both are the same. If not, please use *pip3*).:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "radical-weight",
-   "metadata": {},
    "source": [
     "Then, the directory *runbooks* is created to store the new runbooks"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faced-sponsorship",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%%bash\n",
-    "pip3 install jupyter\n",
-    "jupyter notebook --generate-config\n",
+    "%%bash\r\n",
+    "pip3 install jupyter\r\n",
+    "jupyter notebook --generate-config\r\n",
     "mkdir ~/jupyter-dir/runbooks"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "visible-variance",
-   "metadata": {},
    "source": [
     "Just a final action to configure the notebook installation, editing the *jupyter_notebook_config.py* file"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "furnished-florida",
-   "metadata": {},
    "source": [
     "- nano ~/.jupyter/jupyter_notebook_config.py"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "fleet-bidding",
-   "metadata": {},
    "source": [
-    "In the configuration file, the following options will be activated and set up:\n",
-    "- c.NotebookApp.allow_password_change = True\n",
-    "- c.NotebookApp.allow_root = True\n",
-    "- c.NotebookApp.ip = \"localhost \" (or set the remote host IP)\n",
-    "- c.NotebookApp.notebook_dir = 'jupyter-dir/runbooks/'\n",
+    "In the configuration file, the following options will be activated and set up:\r\n",
+    "- c.NotebookApp.allow_password_change = True\r\n",
+    "- c.NotebookApp.allow_root = True\r\n",
+    "- c.NotebookApp.ip = \"localhost \" (or set the remote host IP)\r\n",
+    "- c.NotebookApp.notebook_dir = 'runbooks/'\r\n",
     "- c.NotebookApp.open_browser = False"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "light-access",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
