set cli examples for vault hvac

--- a/runbooks/DevSecOps runbooks/2.10.Hasicorp_Vault_GetSecret_Example.ipynb
+++ b/runbooks/DevSecOps runbooks/2.10.Hasicorp_Vault_GetSecret_Example.ipynb
@@ -20,6 +20,19 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "%bash\r\n",
+    "# (please, substitute with your appropiate value)\r\n",
+    "export VAULT_ADDR=http://127.0.0.1:8200\r\n",
+    "# (please, substitute with your appropiate value)\r\n",
+    "export VAULT_TOKEN=x.ddasd23802342242"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "# (please, substitute with your appropiate value)\r\n",
     "%env VAULT_ADDR=http://127.0.0.1:8200\r\n",
     "# (please, substitute with your appropiate value)\r\n",
@@ -58,25 +71,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "client = connect()"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### List the available secret in one path\n"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "list_response=client.secrets.kv.list_secrets(path='secret')\r\n",
-    "print('The secret path list under \"secret\" prefix are : {secretos}'\r\n",
-    "      .format(secretos=','.join(list_response['data']['keys'])))"
+    "client = connect()\r\n",
+    "client.is_authenticated()"
    ],
    "outputs": [],
    "metadata": {}
@@ -96,7 +92,7 @@
    "source": [
     "my_secret = { 'my_other_secret': 'mi_otro_secreto'}\r\n",
     "#client.secrets.kv.v2.create_or_update_secret(path='secret/test3',secret=my_secret)\r\n",
-    "client.secrets.kv.create_or_update_secret(path='secret/test3', secret=dict(my_other_secret='mi_otro_secreto'))"
+    "client.secrets.kv.create_or_update_secret(path='test3', secret=dict(my_other_secret='mi_otro_secreto'))"
    ],
    "outputs": [],
    "metadata": {}
@@ -112,10 +108,28 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "result=client.secrets.kv.v2.read_secret(path=\"secret/test3\")\r\n",
+    "result=client.secrets.kv.v2.read_secret(path=\"test3\")\r\n",
     "print(result)\r\n",
     "print()\r\n",
     "print('The value of the secret \"my_other_secret\" is {result_value}'.format(result_value=result['data']['data']))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### List the available secret in one path\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "list_response=client.secrets.kv.list_secrets(path='test3')\r\n",
+    "print('The secret path list under \"secret\" prefix are : {secretos}'\r\n",
+    "      .format(secretos=','.join(list_response['data']['keys'])))"
    ],
    "outputs": [],
    "metadata": {}
@@ -131,7 +145,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "client.secrets.kv.delete_secret_versions(path=\"secret/test3\",versions=[1,2,3])"
+    "client.secrets.kv.delete_secret_versions(path=\"test3\",versions=[1,2,3])"
    ],
    "outputs": [],
    "metadata": {}
@@ -140,7 +154,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "client.secrets.kv.delete_secret_versions(path=\"secret/test3\",versions=[8])"
+    "client.secrets.kv.delete_secret_versions(path=\"test3\",versions=[8])"
    ],
    "outputs": [],
    "metadata": {}
