including the correspondant aws cli command

--- a/runbooks/DevSecOps runbooks/1.2.AWS_SecretManager_GetSecret_Example.ipynb
+++ b/runbooks/DevSecOps runbooks/1.2.AWS_SecretManager_GetSecret_Example.ipynb
@@ -111,9 +111,18 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "That it is the same as executing with the CLI"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "!aws secretsmanager get-secret-value --secret-id prod/api/devopslab/miclavesecreta"
+   ],
    "outputs": [],
    "metadata": {}
   }
