including some additional AWS cli instructions

--- a/runbooks/DevSecOps runbooks/1.3.AWS_SecretManager_ListSecrets_Example.ipynb
+++ b/runbooks/DevSecOps runbooks/1.3.AWS_SecretManager_ListSecrets_Example.ipynb
@@ -89,9 +89,34 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "That it is the same as executing the AWS Cli command"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "!aws secretsmanager list-secrets"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "and finally, let's deleting some secrets by AWS cli interface"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "!aws secretsmanager delete-secret --secret-id prod/api/devopslab/minuevaclavesecreta --recovery-window-in-days 7 "
+   ],
    "outputs": [],
    "metadata": {}
   }
