adding restore function

--- a/runbooks/DevSecOps runbooks/1.3.AWS_SecretManager_ListSecrets_Example.ipynb
+++ b/runbooks/DevSecOps runbooks/1.3.AWS_SecretManager_ListSecrets_Example.ipynb
@@ -119,6 +119,22 @@
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "with the recovery window period, it is still possible to restore the secret"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "!aws secretsmanager restore-secret --secret-id prod/api/devopslab/minuevaclavesecreta"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
