Update 2. DevOps Lab Check Process.ipynb

--- a/runbooks/2. DevOps Lab Check Process.ipynb
+++ b/runbooks/2. DevOps Lab Check Process.ipynb
@@ -36,7 +36,7 @@
    "execution_count": null,
    "source": [
     "%env remote_machine_pem_file=devopslab-london-new.pem\r\n",
-    "%env remote_user_and_system=ubuntu@ec2-18-169-243-95.eu-west-2.compute.amazonaws.com"
+    "%env remote_user_and_system=ubuntu@ec2-ip.area.compute.amazonaws.com"
    ],
    "outputs": [],
    "metadata": {}
