--- a/runbooks/DevSecOps runbooks/0.3. Start Jupyter Notebook.ipynb
+++ b/runbooks/DevSecOps runbooks/0.3. Start Jupyter Notebook.ipynb
@@ -58,7 +58,7 @@
     "%%bash\n",
     "PROCESS_CMD='ps -a'\n",
     "STATUS_SCRIPT='eval ${PROCESS_CMD} | grep jupyter | wc -l'\n",
-    "# ssh -i ~/.ssh/devopslab-london.pem ${2}@${1} ${STATUS_SCRIPT}\n",
+    "# ssh -i ${1} ${STATUS_SCRIPT}\n",
     "d=$(${STATUS_SCRIPT})\n",
     "if [ ${d} == \"1\" ]; \n",
     "then\n",
@@ -89,7 +89,7 @@
    "id": "frozen-prime",
    "metadata": {},
    "source": [
-    "If the kernel is going to be executed in local machine and not in a server, the envionment could be started directly with the URL that is shwon in the terminal console."
+    "If the kernel is going to be executed in local machine and not in a server, the envionment could be started directly with the URL that is shown in the terminal console."
    ]
   },
   {
@@ -107,7 +107,7 @@
    "id": "meaning-patient",
    "metadata": {},
    "source": [
-    "### F-2) In a server"
+    "### 3.2. In a server"
    ]
   },
   {
