--- a/runbooks/DevSecOps runbooks/0.0. Connect to the target system.ipynb
+++ b/runbooks/DevSecOps runbooks/0.0. Connect to the target system.ipynb
@@ -55,16 +55,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alternate-equipment",
+   "id": "af4d0864",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "! ssh -i \"$target_host\" \"$user\" \"$password\""
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.6 64-bit (conda)"
+   "display_name": "Python 3.7.6 64-bit (conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -77,9 +82,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6-final"
-  },
-  "interpreter": {
-   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   }
  },
  "nbformat": 4,
