--- a/runbooks/DevSecOps runbooks/0.1. Install Jupyter Pre-requisites.ipynb
+++ b/runbooks/DevSecOps runbooks/0.1. Install Jupyter Pre-requisites.ipynb
@@ -22,12 +22,21 @@
     "- virtualenv\n",
     "\n",
     "**Steps to ckeck**:\n",
+    "\n",
     "0. Connect to system\n",
     "1. Verfiy python installed version (if any)\n",
     "2. If Python is version 2, then uninstall\n",
     "3. Install python3\n",
     "4. Install pip\n",
     "5. Install virtualenv\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc471307",
+   "metadata": {},
+   "source": [
+    "### 0. Connect to the target system"
    ]
   },
   {
