--- a/runbooks/DevSecOps runbooks/0.0. Connect to the target system.ipynb
+++ b/runbooks/DevSecOps runbooks/0.0. Connect to the target system.ipynb
@@ -22,9 +22,7 @@
    "id": "backed-valley",
    "metadata": {},
    "source": [
-    "Ask for the name of the target system and the username and password to connect.\n",
-    "\n",
-    "note: would it be also required a key file?"
+    "Ask for the name of the target system and the username and password to connect or to be used for sudo commands (if required)\n"
    ]
   },
   {
@@ -36,8 +34,8 @@
    "source": [
     "import getpass\n",
     "target_host=input (\"Which is the hostname of the target machine? \")\n",
-    "user=input (\"Which is your user to execute admin processes? \")\n",
-    "password = getpass.getpass(\"Which is the password to use? \")"
+    "user=input (\"If you are not using the .ssh/config file and a .pem file, Which is your user to execute admin processes? \")\n",
+    "password = getpass.getpass(\"Which is the password to use for sudo (if required)? \")"
    ]
   },
   {
@@ -50,16 +48,6 @@
     "%store target_host\n",
     "%store user\n",
     "%store password"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af4d0864",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! ssh -i \"$target_host\" \"$user\" \"$password\""
    ]
   }
  ],
@@ -81,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
