--- a/runbooks/DevSecOps runbooks/1.0.AWS_CLI_2_Installation.ipynb
+++ b/runbooks/DevSecOps runbooks/1.0.AWS_CLI_2_Installation.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# AWS CLI Installation\n",
     "## DevOpsLab Example\n",
@@ -11,107 +12,87 @@
     "### Prerequisite tasks\n",
     "- Knowing admin user and password for the target hots (**NOT YET IN THIS NOTEBOOK VERSION**)\n",
     "- No other python dependencies are needed."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Connect to target system (optional)"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%run \"0.0. Connect to the target system.ipynb\""
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# import getpass\r\n",
-    "# target_host=input (\"Which is the hostname of the target machine? \")\r\n",
-    "# user=input (\"Which is your user to execute admin processes? \")\r\n",
-    "# password = getpass.getpass(\"Which is the password to use? \")\r\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Install latest version of AWS CLI 2\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Execute the following commands:\n",
     "\n",
     "- First, download and extract the awscli2\n",
     "- Then, install it"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "%%bash\r\n",
-    "cd\r\n",
-    "if [ ! -f awscliv2.zip ];\r\n",
-    "  then \r\n",
-    "    curl \"https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip\" -o \"awscliv2.zip\"\r\n",
-    "    echo \"file awscliv2.zip downloaded\"\r\n",
-    "  else\r\n",
-    "    echo \"File awscli2.zip already downloaded.\"\r\n",
-    "fi\r\n",
-    "if [ ! -d ./aws ]\r\n",
-    "  then\r\n",
-    "    unzip awscliv2.zip\r\n",
-    "    echo \"Directory aws extracted\"\r\n",
-    "  else\r\n",
-    "    echo \"Directory aws already extracted.\"\r\n",
+    "%%bash\n",
+    "cd\n",
+    "if [ ! -f awscliv2.zip ];\n",
+    "  then \n",
+    "    curl \"https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip\" -o \"awscliv2.zip\"\n",
+    "    echo \"file awscliv2.zip downloaded\"\n",
+    "  else\n",
+    "    echo \"File awscli2.zip already downloaded.\"\n",
+    "fi\n",
+    "if [ ! -d ./aws ]\n",
+    "  then\n",
+    "    unzip awscliv2.zip\n",
+    "    echo \"Directory aws extracted\"\n",
+    "  else\n",
+    "    echo \"Directory aws already extracted.\"\n",
     "fi"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "%%bash -s \"$target_host\" \"$user\" \"$password\"\r\n",
-    "cd\r\n",
-    "if [ ! -f /usr/local/bin/aws ];\r\n",
-    "  then\r\n",
-    "    echo $3 | sudo -S ./aws/install\r\n",
-    "    if [ $? -eq 0 ];\r\n",
-    "      then \r\n",
-    "        echo \"AWS CLI succesfully installed\"\r\n",
-    "    fi\r\n",
-    "  else\r\n",
-    "    echo \"AWS ClI already installed\"\r\n",
-    "fi\r\n",
-    "/usr/local/bin/aws --version"
-   ],
-   "outputs": [],
    "metadata": {
     "scrolled": true
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   },
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "%%bash -s \"$target_host\" \"$user\" \"$password\"\n",
+    "cd\n",
+    "if [ ! -f /usr/local/bin/aws ];\n",
+    "  then\n",
+    "    echo $3 | sudo -S ./aws/install\n",
+    "    if [ $? -eq 0 ];\n",
+    "      then \n",
+    "        echo \"AWS CLI succesfully installed\"\n",
+    "    fi\n",
+    "  else\n",
+    "    echo \"AWS ClI already installed\"\n",
+    "fi\n",
+    "/usr/local/bin/aws --version"
+   ]
   }
  ],
  "metadata": {
