--- a/runbooks/DevSecOps runbooks/2.01.Hasicorp_Vault_Server_Installation.ipynb
+++ b/runbooks/DevSecOps runbooks/2.01.Hasicorp_Vault_Server_Installation.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Hasicorp Vault CLI Installation\n",
     "## DevOpsLab Example\n",
@@ -10,183 +11,180 @@
     "\n",
     "### Prerequisite tasks\n",
     "- Knowing admin user and password for the target hots \n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Connect to target system"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "import getpass\r\n",
-    "target_host=input (\"Which is the hostname of the target machine? \")\r\n",
-    "user=input (\"Which is your user to execute admin processes? \")\r\n",
-    "password = getpass.getpass(\"Which is the password to use? \")"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "%run \"0.0. Connect to the target system.ipynb\""
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Install latest version of Hasicorp Vault Server"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Previosuly, add the HashiCorp GPG key to your system"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "%%bash -s \"$target_host\" \"$user\" \"$password\"\r\n",
-    "tmpfile=\"/tmp/HasiCorp_GPG_key\"\r\n",
-    "curl -fsSL https://apt.releases.hashicorp.com/gpg > $tmpfile\r\n",
-    "if [ $? -eq 0 ];\r\n",
-    "then \r\n",
-    "  echo $3 | sudo -S apt-key add /tmp/HasiCorp_GPG_key\r\n",
-    "  if [ $? -eq 0 ];\r\n",
-    "  then\r\n",
-    "    echo \"Key added\"\r\n",
-    "    rm $tmpfile\r\n",
-    "  else\r\n",
-    "    echo \"Unexpected error adding the GPG Key\" $?  \r\n",
-    "  fi\r\n",
-    "else\r\n",
-    "  echo \"Unexpected error downloading the GPG Key\" $?\r\n",
-    "fi"
-   ],
-   "outputs": [],
    "metadata": {
     "scrolled": true
-   }
+   },
+   "outputs": [],
+   "source": [
+    "%%bash -s \"$target_host\" \"$user\" \"$password\"\n",
+    "tmpfile=\"/tmp/HasiCorp_GPG_key\"\n",
+    "curl -fsSL https://apt.releases.hashicorp.com/gpg > $tmpfile\n",
+    "if [ $? -eq 0 ];\n",
+    "then \n",
+    "  echo $3 | sudo -S apt-key add /tmp/HasiCorp_GPG_key\n",
+    "  if [ $? -eq 0 ];\n",
+    "  then\n",
+    "    echo \"Key added\"\n",
+    "    rm $tmpfile\n",
+    "  else\n",
+    "    echo \"Unexpected error adding the GPG Key\" $?  \n",
+    "  fi\n",
+    "else\n",
+    "  echo \"Unexpected error downloading the GPG Key\" $?\n",
+    "fi"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Add the official HashiCorp Linux repository"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "%%bash -s \"$target_host\" \"$user\" \"$password\"\r\n",
-    "if [ 'grep hashicorp /etc/apt/sources.list | wc -l' != 1 ];\r\n",
-    "  then\r\n",
-    "    echo $3 | sudo -S apt-add-repository \"deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main\"\r\n",
-    "    if [ $? -eq 0 ];\r\n",
-    "      then \r\n",
-    "        echo \"HashiCorp Linux repository succesfully installed\"\r\n",
-    "    fi\r\n",
-    "  else\r\n",
-    "    echo \"HashiCorp LInux repository already installed\"\r\n",
-    "fi"
-   ],
-   "outputs": [],
    "metadata": {
     "scrolled": false
-   }
+   },
+   "outputs": [],
+   "source": [
+    "%%bash -s \"$target_host\" \"$user\" \"$password\"\n",
+    "if [ 'grep hashicorp /etc/apt/sources.list | wc -l' != 1 ];\n",
+    "  then\n",
+    "    echo $3 | sudo -S apt-add-repository \"deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main\"\n",
+    "    if [ $? -eq 0 ];\n",
+    "      then \n",
+    "        echo \"HashiCorp Linux repository succesfully installed\"\n",
+    "    fi\n",
+    "  else\n",
+    "    echo \"HashiCorp LInux repository already installed\"\n",
+    "fi"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Then, update and install vault"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "%%bash -s \"$target_host\" \"$user\" \"$password\"\r\n",
-    "if [ 'which vault ! wc -l' == \"1\" ]; then\r\n",
-    "  echo \"Vault already installed\"\r\n",
-    "else\r\n",
-    "  echo \"Starting installation of HashiCorp Vault\"\r\n",
-    "  echo \"Checking apt update\"\r\n",
-    "  echo $3 | sudo -S apt update\r\n",
-    "  echo \"Install vault\"\r\n",
-    "  echo $3 | sudo -S apt-get install -y vault\r\n",
-    "fi"
-   ],
-   "outputs": [],
    "metadata": {
     "scrolled": true
-   }
+   },
+   "outputs": [],
+   "source": [
+    "%%bash -s \"$target_host\" \"$user\" \"$password\"\n",
+    "if [ 'which vault ! wc -l' == \"1\" ]; then\n",
+    "  echo \"Vault already installed\"\n",
+    "else\n",
+    "  echo \"Starting installation of HashiCorp Vault\"\n",
+    "  echo \"Checking apt update\"\n",
+    "  echo $3 | sudo -S apt update\n",
+    "  echo \"Install vault\"\n",
+    "  echo $3 | sudo -S apt-get install -y vault\n",
+    "fi"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Start the server"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Now the server is installed, to start the following steps are required:\r\n",
-    "\r\n",
-    "- Start the server in DEV mode (in a separate terminal) with \"~/vault server -dev\"\r\n",
-    "\r\n",
-    "Open a new terminal window and then\r\n",
-    "\r\n",
-    "- first, export the variable VAULT_ADDR\r\n",
-    "- Then, optionally, export the variable VAULT_TOKEN\r\n",
-    "- Then, verify status of the server with \"~/vault status\"\r\n"
-   ],
-   "metadata": {}
+    "Now the server is installed, to start the following steps are required:\n",
+    "\n",
+    "- Start the server in DEV mode (in a separate terminal) with \"~/vault server -dev\"\n",
+    "\n",
+    "Open a new terminal window and then\n",
+    "\n",
+    "- first, export the variable VAULT_ADDR\n",
+    "- Then, optionally, export the variable VAULT_TOKEN\n",
+    "- Then, verify status of the server with \"~/vault status\"\n"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "```bash\r\n",
-    "$ vault server -dev\r\n",
-    "...\r\n",
-    "\r\n",
-    "-- (as example) Unseal Key: gQdYRvr8HXEa8OJzRXL52/U3vvjBRXw53DxuqWjq4Nk=\r\n",
-    "-- (as example) Root Token: s.yp1aA7bvBdXOetuBKIIZQBmk\r\n",
-    "(terminal as server waiting)\r\n",
-    "...\r\n",
-    "```\r\n"
-   ],
-   "metadata": {}
+    "```bash\n",
+    "$ vault server -dev\n",
+    "...\n",
+    "\n",
+    "-- (as example) Unseal Key: gQdYRvr8HXEa8OJzRXL52/U3vvjBRXw53DxuqWjq4Nk=\n",
+    "-- (as example) Root Token: s.yp1aA7bvBdXOetuBKIIZQBmk\n",
+    "(terminal as server waiting)\n",
+    "...\n",
+    "```\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "%%bash\r\n",
-    "export VAULT_ADDR=http://127.0.0.1:8200\r\n",
+    "%%bash\n",
+    "export VAULT_ADDR=http://127.0.0.1:8200\n",
     "export VAULT_TOKEN=s.yp1aA7bvBdXOetuBKIIZQBmk"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "%env VAULT_ADDR=http://127.0.0.1:8200\r\n",
-    "%env VAULT_TOKEN=s.yp1aA7bvBdXOetuBKIIZQBmk"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "%env VAULT_ADDR=http://127.0.0.1:8200\n",
+    "%env VAULT_TOKEN=s.yp1aA7bvBdXOetuBKIIZQBmk"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Verify status of the server**\n",
     "\n",
@@ -197,24 +195,23 @@
     "    xxxxxx    xxxxxxx\n",
     "\n",
     "    xxxxxx    xxxxxxx"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!vault status"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
