--- a/runbooks/DevSecOps runbooks/1.0.AWS_CLI_2_Installation.ipynb
+++ b/runbooks/DevSecOps runbooks/1.0.AWS_CLI_2_Installation.ipynb
@@ -43,8 +43,9 @@
    "source": [
     "Execute the following commands:\n",
     "\n",
-    "- First, download and extract the awscli2\n",
-    "- Then, install it"
+    "- First, download awscli2.zip\n",
+    "- Then, extract awscli2\n",
+    "- Finally, install it"
    ]
   },
   {
@@ -61,13 +62,27 @@
     "    echo \"file awscliv2.zip downloaded\"\n",
     "  else\n",
     "    echo \"File awscli2.zip already downloaded.\"\n",
-    "fi\n",
-    "if [ ! -d ./aws ]\n",
-    "  then\n",
-    "    unzip awscliv2.zip\n",
-    "    echo \"Directory aws extracted\"\n",
-    "  else\n",
-    "    echo \"Directory aws already extracted.\"\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9b08e32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if [ -f -./awscli2.zip ]\n",
+    "then\n",
+    "  if [ ! -d ./aws ]\n",
+    "    then\n",
+    "      unzip awscliv2.zip\n",
+    "      echo \"Directory aws extracted\"\n",
+    "    else\n",
+    "      echo \"Directory aws already extracted.\"\n",
+    "  fi\n",
+    "else\n",
+    "  echo \"File awscli2.zip not already downloaded.\"\n",
     "fi"
    ]
   },
