fix and enhance examples

--- a/runbooks/DevSecOps runbooks/1.1.AWS_Boto3_Installation.ipynb
+++ b/runbooks/DevSecOps runbooks/1.1.AWS_Boto3_Installation.ipynb
@@ -48,7 +48,8 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$target_host\" \"$user\" \"$password\"\n",
-    "if [ $(pip3 list|grep boto3|wc -l) == 1 ]; then\n",
+    "if [ $(pip3 list|grep boto3|wc -l) == 1 ]\n",
+    "then\n",
     "  echo \"boto3 library already installed for this user\"\n",
     "else\n",
     "  echo \"Starting installation of boto3 library for this user\"\n",
