--- a/runbooks/DevSecOps runbooks/1.0.AWS_CLI_2_Installation.ipynb
+++ b/runbooks/DevSecOps runbooks/1.0.AWS_CLI_2_Installation.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "bf5f1f7e",
    "metadata": {},
    "source": [
     "# AWS CLI Installation\n",
@@ -16,6 +17,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "639e072c",
    "metadata": {},
    "source": [
     "### Connect to target system (optional)"
@@ -24,6 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "17919399",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +35,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "52c78992",
    "metadata": {},
    "source": [
     "### Install latest version of AWS CLI 2\n"
@@ -39,6 +43,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cde59637",
    "metadata": {},
    "source": [
     "Execute the following commands:\n",
@@ -51,6 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "763ed8fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,11 +78,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%bash\n",
     "if [ -f -./awscli2.zip ]\n",
     "then\n",
     "  if [ ! -d ./aws ]\n",
     "    then\n",
-    "      unzip awscliv2.zip\n",
+    "      unzip -q awscliv2.zip\n",
     "      echo \"Directory aws extracted\"\n",
     "    else\n",
     "      echo \"Directory aws already extracted.\"\n",
@@ -89,6 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6f1be69f",
    "metadata": {
     "scrolled": true
    },
