ensuring right directory

--- a/runbooks/DevSecOps runbooks/1.0.AWS_CLI_2_Installation.ipynb
+++ b/runbooks/DevSecOps runbooks/1.0.AWS_CLI_2_Installation.ipynb
@@ -79,7 +79,8 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "if [ -f -./awscli2.zip ]\n",
+    "cd\n",
+    "if [ -f awscli2.zip ]\n",
     "then\n",
     "  if [ ! -d ./aws ]\n",
     "    then\n",
