--- a/runbooks/DevSecOps runbooks/1.4.AWS_SecretManager_CLI_Examples.ipynb
+++ b/runbooks/DevSecOps runbooks/1.4.AWS_SecretManager_CLI_Examples.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!aws secretsmanager create-secret --name OneTestSecret --description \"One test secret created with the CLI\" \\\n",
+    "!aws secretsmanager create-secret --name MyOneTestSecret --description \"One test secret created with the CLI\" \\\n",
     "    --secret-string \"{\\\"user\\\":\\\"auseridentifier\\\",\\\"password\\\":\\\"TEST-PASSWORD\\\"}\""
    ]
   },
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!aws secretsmanager create-secret --name OneJsonTestSecret --secret-string file://thetestfileforcred.json"
+    "!aws secretsmanager create-secret --name MyOneJsonTestSecret --secret-string file://thetestfileforcred.json"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!aws secretsmanager delete-secret --secret-id prod/api/devopslab/minuevaclavesecreta --recovery-window-in-days 7 "
+    "!aws secretsmanager delete-secret --secret-id MyOneTestSecret --recovery-window-in-days 7 "
    ]
   },
   {
@@ -131,7 +131,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!aws secretsmanager restore-secret --secret-id prod/api/devopslab/minuevaclavesecreta"
+    "!aws secretsmanager restore-secret --secret-id MyOneTestSecret"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94059ca0",
+   "metadata": {},
+   "source": [
+    "let's deleting some secrets by AWS cli interface with no recovery-window parameter (default)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a9ac95e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!aws secretsmanager delete-secret --secret-id MyOneTestSecret"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "048887db",
+   "metadata": {},
+   "source": [
+    "!aws secretsmanager restore-secret --secret-id MyOneTestSecret"
    ]
   }
  ],
